add: cross border blog

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.svg" />
+    <link rel="shortcut icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="跨境电商与技术的前沿思考 - 深度剖析全球电商趋势，分享技术创新与营销策略" />
+    <meta name="keywords" content="跨境电商,cross-border ecommerce,技术创新,营销策略,全球电商,亚马逊FBA,独立站,SEO,Google广告,TikTok购物" />
+    <meta name="author" content="Cross-border E-commerce Blog" />
+    <title>跨境电商前沿 | Cross-border E-commerce Insights</title>
   </head>
   <body>
     <div id="root"></div>
